syntax = "proto3";

package video;

option go_package = "github.com/lumiforge/sellerproof-backend/proto";

service VideoService {
  // Multipart upload
  rpc InitiateMultipartUpload(InitiateMultipartUploadRequest) returns (InitiateMultipartUploadResponse);
  rpc GetPartUploadURLs(GetPartUploadURLsRequest) returns (GetPartUploadURLsResponse);
  rpc CompleteMultipartUpload(CompleteMultipartUploadRequest) returns (CompleteMultipartUploadResponse);

  // Video management
  rpc GetVideo(GetVideoRequest) returns (GetVideoResponse);

  // Sharing
  rpc CreatePublicShareLink(CreateShareLinkRequest) returns (CreateShareLinkResponse);
  rpc GetPublicVideo(GetPublicVideoRequest) returns (GetPublicVideoResponse);
  rpc RevokeShareLink(RevokeShareLinkRequest) returns (RevokeShareLinkResponse);
}

message InitiateMultipartUploadRequest {
  string file_name = 1;
  int64 file_size_bytes = 2;
  int32 duration_seconds = 3;
}

message InitiateMultipartUploadResponse {
  string video_id = 1;
  string upload_id = 2;
  int32 recommended_part_size_mb = 3;
}

message GetPartUploadURLsRequest {
  string video_id = 1;
  int32 total_parts = 2;
}

message GetPartUploadURLsResponse {
  repeated string part_urls = 1;
  int64 expires_at = 2;
}

message CompleteMultipartUploadRequest {
  string video_id = 1;
  repeated CompletedPart parts = 2;
}

message CompletedPart {
  int32 part_number = 1;
  string etag = 2;
}

message CompleteMultipartUploadResponse {
  string message = 1;
  string video_url = 2;
}

message GetVideoRequest {
  string video_id = 1;
}

message GetVideoResponse {
  Video video = 1;
}

message Video {
  string video_id = 1;
  string file_name = 2;
  int64 file_size_bytes = 3;
  int32 duration_seconds = 4;
  string upload_status = 5;
  int64 uploaded_at = 6;
}

message CreateShareLinkRequest {
  string video_id = 1;
  int32 expires_in_hours = 2;
}

message CreateShareLinkResponse {
  string share_url = 1;
  int64 expires_at = 2;
}

message GetPublicVideoRequest {
  string share_token = 1;
}

message GetPublicVideoResponse {
  string file_name = 1;
  int64 file_size = 2;
  string download_url = 3;
  int64 expires_at = 4;
}

message RevokeShareLinkRequest {
  string video_id = 1;
}

message RevokeShareLinkResponse {
  bool success = 1;
}