syntax = "proto3";

package auth;

option go_package = "github.com/lumiforge/sellerproof-backend/proto";

// Auth сервис для регистрации, авторизации и управления пользователями
service AuthService {
  // Регистрация нового пользователя
  rpc Register(RegisterRequest) returns (RegisterResponse);
  
  // Подтверждение email
  rpc VerifyEmail(VerifyEmailRequest) returns (VerifyEmailResponse);
  
  // Авторизация (логин)
  rpc Login(LoginRequest) returns (LoginResponse);
  
  // Обновление JWT токена
  rpc RefreshToken(RefreshTokenRequest) returns (RefreshTokenResponse);
  
  // Выход (logout)
  rpc Logout(LogoutRequest) returns (LogoutResponse);
  
  // Получение информации о текущем пользователе
  rpc GetProfile(GetProfileRequest) returns (GetProfileResponse);
  
  // Обновление профиля
  rpc UpdateProfile(UpdateProfileRequest) returns (UpdateProfileResponse);
}

// Сообщения для регистрации
message RegisterRequest {
  string email = 1;
  string password = 2;
  string full_name = 3;
}

message RegisterResponse {
  string user_id = 1;
  string message = 2;
}

// Сообщения для верификации email
message VerifyEmailRequest {
  string email = 1;
  string code = 2;
}

message VerifyEmailResponse {
  string message = 1;
  bool success = 2;
}

// Сообщения для авторизации
message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  string access_token = 1;
  string refresh_token = 2;
  int64 expires_at = 3;
  UserInfo user = 4;
}

// Сообщения для обновления токена
message RefreshTokenRequest {
  string refresh_token = 1;
}

message RefreshTokenResponse {
  string access_token = 1;
  string refresh_token = 2;
  int64 expires_at = 3;
}

// Сообщения для выхода
message LogoutRequest {
  string refresh_token = 1;
}

message LogoutResponse {
  string message = 1;
}

// Сообщения для профиля
message GetProfileRequest {
}

message GetProfileResponse {
  UserInfo user = 1;
}

message UpdateProfileRequest {
  string full_name = 1;
}

message UpdateProfileResponse {
  UserInfo user = 1;
}

// Информация о пользователе
message UserInfo {
  string user_id = 1;
  string email = 2;
  string full_name = 3;
  string role = 4;
  string org_id = 5;
  bool email_verified = 6;
  int64 created_at = 7;
  int64 updated_at = 8;
}