package main

import (
	"context"
	"crypto/tls"
	"fmt"
	"log"
	"net/url"
	"os"
	"strconv"
	"time"

	"google.golang.org/grpc"
	"google.golang.org/grpc/credentials"
	"google.golang.org/grpc/credentials/insecure"
	"google.golang.org/grpc/metadata"

	pb "github.com/lumiforge/sellerproof-backend/proto"
)

// URL –≤–∞—à–µ–≥–æ —Å–µ—Ä–≤–∏—Å–∞ –≤ Yandex Cloud (–±—É–¥–µ—Ç —É—Å—Ç–∞–Ω–æ–≤–ª–µ–Ω –ø—Ä–∏ —Å–±–æ—Ä–∫–µ –∏–∑ Makefile)
var serviceURL string
var testTimeout = 30 // —Å–µ–∫—É–Ω–¥—ã –ø–æ —É–º–æ–ª—á–∞–Ω–∏—é
var testMode = ""    // "auth" –∏–ª–∏ "video" –∏–ª–∏ "" (–≤—Å–µ —Ç–µ—Å—Ç—ã)

func init() {
	// –ï—Å–ª–∏ URL –Ω–µ —É—Å—Ç–∞–Ω–æ–≤–ª–µ–Ω –ø—Ä–∏ —Å–±–æ—Ä–∫–µ, –∏—Å–ø–æ–ª—å–∑—É–µ–º –∑–Ω–∞—á–µ–Ω–∏–µ –ø–æ —É–º–æ–ª—á–∞–Ω–∏—é

	// –ß–∏—Ç–∞–µ–º URL –∏–∑ –ø–µ—Ä–µ–º–µ–Ω–Ω–æ–π –æ–∫—Ä—É–∂–µ–Ω–∏—è, –µ—Å–ª–∏ –æ–Ω–∞ —É—Å—Ç–∞–Ω–æ–≤–ª–µ–Ω–∞ (–∏–º–µ–µ—Ç –ø—Ä–∏–æ—Ä–∏—Ç–µ—Ç –Ω–∞–¥ Makefile)
	if url := os.Getenv("SERVICE_URL"); url != "" {
		serviceURL = url
	}

	// –ß–∏—Ç–∞–µ–º —Ç–∞–π–º–∞—É—Ç –∏–∑ –ø–µ—Ä–µ–º–µ–Ω–Ω–æ–π –æ–∫—Ä—É–∂–µ–Ω–∏—è, –µ—Å–ª–∏ –æ–Ω–∞ —É—Å—Ç–∞–Ω–æ–≤–ª–µ–Ω–∞
	if timeout := os.Getenv("TIMEOUT"); timeout != "" {
		if t, err := strconv.Atoi(timeout); err == nil {
			testTimeout = t
		}
	}

	// –ß–∏—Ç–∞–µ–º —Ä–µ–∂–∏–º —Ç–µ—Å—Ç–æ–≤ –∏–∑ –ø–µ—Ä–µ–º–µ–Ω–Ω–æ–π –æ–∫—Ä—É–∂–µ–Ω–∏—è
	if mode := os.Getenv("TEST_MODE"); mode != "" {
		testMode = mode
	}
}

// normalizeURL –Ω–æ—Ä–º–∞–ª–∏–∑—É–µ—Ç URL, –¥–æ–±–∞–≤–ª—è—è –ø–æ—Ä—Ç –µ—Å–ª–∏ –Ω–µ–æ–±—Ö–æ–¥–∏–º–æ
func normalizeURL(rawURL string) string {
	// –ï—Å–ª–∏ URL –ø—É—Å—Ç–æ–π, –≤–æ–∑–≤—Ä–∞—â–∞–µ–º –ø—É—Å—Ç—É—é —Å—Ç—Ä–æ–∫—É
	if rawURL == "" {
		return rawURL
	}

	// –ü–∞—Ä—Å–∏–º URL
	parsedURL, err := url.Parse(rawURL)
	if err != nil {
		log.Printf("‚ö†Ô∏è  –ü—Ä–µ–¥—É–ø—Ä–µ–∂–¥–µ–Ω–∏–µ: –Ω–µ —É–¥–∞–ª–æ—Å—å —Ä–∞–∑–æ–±—Ä–∞—Ç—å URL '%s': %v", rawURL, err)
		return rawURL
	}

	// –ï—Å–ª–∏ —Å—Ö–µ–º–∞ –Ω–µ —É–∫–∞–∑–∞–Ω–∞, –¥–æ–±–∞–≤–ª—è–µ–º https
	if parsedURL.Scheme == "" {
		parsedURL.Scheme = "https"
	}

	// –ï—Å–ª–∏ –ø–æ—Ä—Ç –Ω–µ —É–∫–∞–∑–∞–Ω –∏ —ç—Ç–æ https, –¥–æ–±–∞–≤–ª—è–µ–º –ø–æ—Ä—Ç 443
	if parsedURL.Port() == "" {
		if parsedURL.Scheme == "https" {
			parsedURL.Host = parsedURL.Host + ":443"
		} else if parsedURL.Scheme == "http" {
			parsedURL.Host = parsedURL.Host + ":80"
		}
	}

	// –î–ª—è gRPC –Ω–∞–º –Ω—É–∂–µ–Ω —Ç–æ–ª—å–∫–æ —Ö–æ—Å—Ç:–ø–æ—Ä—Ç, –±–µ–∑ —Å—Ö–µ–º—ã
	return parsedURL.Host
}

// TestClient –ø—Ä–µ–¥—Å—Ç–∞–≤–ª—è–µ—Ç —Ç–µ—Å—Ç–æ–≤—ã–π –∫–ª–∏–µ–Ω—Ç –¥–ª—è gRPC —Å–µ—Ä–≤–∏—Å–∞
type TestClient struct {
	conn   *grpc.ClientConn
	auth   pb.AuthServiceClient
	video  pb.VideoServiceClient
	token  string
	userID string
}

// NewTestClient —Å–æ–∑–¥–∞–µ—Ç –Ω–æ–≤—ã–π —Ç–µ—Å—Ç–æ–≤—ã–π –∫–ª–∏–µ–Ω—Ç
func NewTestClient() (*TestClient, error) {
	// –ù–æ—Ä–º–∞–ª–∏–∑—É–µ–º URL, –¥–æ–±–∞–≤–ª—è—è –ø–æ—Ä—Ç –µ—Å–ª–∏ –Ω–µ–æ–±—Ö–æ–¥–∏–º–æ
	normalizedURL := normalizeURL(serviceURL)

	// –û–ø—Ä–µ–¥–µ–ª—è–µ–º —Ç–∏–ø credentials –Ω–∞ –æ—Å–Ω–æ–≤–µ —Å—Ö–µ–º—ã URL
	var creds credentials.TransportCredentials
	if serviceURL != "" {
		parsedURL, err := url.Parse(serviceURL)
		if err == nil && parsedURL.Scheme == "https" {
			// –î–ª—è HTTPS –∏—Å–ø–æ–ª—å–∑—É–µ–º TLS credentials
			creds = credentials.NewTLS(&tls.Config{
				InsecureSkipVerify: true, // –î–ª—è —Ç–µ—Å—Ç–∏—Ä–æ–≤–∞–Ω–∏—è –ø—Ä–æ–ø—É—Å–∫–∞–µ–º –ø—Ä–æ–≤–µ—Ä–∫—É —Å–µ—Ä—Ç–∏—Ñ–∏–∫–∞—Ç–∞
			})
		} else {
			// –î–ª—è HTTP –∏–ª–∏ –±–µ–∑ —Å—Ö–µ–º—ã –∏—Å–ø–æ–ª—å–∑—É–µ–º insecure credentials
			creds = insecure.NewCredentials()
		}
	} else {
		creds = insecure.NewCredentials()
	}

	// –£—Å—Ç–∞–Ω–∞–≤–ª–∏–≤–∞–µ–º —Å–æ–µ–¥–∏–Ω–µ–Ω–∏–µ —Å gRPC —Å–µ—Ä–≤–µ—Ä–æ–º
	conn, err := grpc.Dial(normalizedURL, grpc.WithTransportCredentials(creds))
	if err != nil {
		return nil, fmt.Errorf("–Ω–µ —É–¥–∞–ª–æ—Å—å –ø–æ–¥–∫–ª—é—á–∏—Ç—å—Å—è –∫ —Å–µ—Ä–≤–µ—Ä—É: %v", err)
	}

	client := &TestClient{
		conn:  conn,
		auth:  pb.NewAuthServiceClient(conn),
		video: pb.NewVideoServiceClient(conn),
	}

	return client, nil
}

// Close –∑–∞–∫—Ä—ã–≤–∞–µ—Ç —Å–æ–µ–¥–∏–Ω–µ–Ω–∏–µ
func (c *TestClient) Close() {
	if c.conn != nil {
		c.conn.Close()
	}
}

// RunTests –∑–∞–ø—É—Å–∫–∞–µ—Ç –≤—Å–µ —Ç–µ—Å—Ç—ã
func (c *TestClient) RunTests() {
	// –ù–æ—Ä–º–∞–ª–∏–∑—É–µ–º URL –¥–ª—è –ø–æ–¥–∫–ª—é—á–µ–Ω–∏—è
	normalizedURL := normalizeURL(serviceURL)

	// –°–æ–∑–¥–∞–µ–º –ø–æ–ª–Ω—ã–π URL –¥–ª—è –æ—Ç–æ–±—Ä–∞–∂–µ–Ω–∏—è
	displayURL := serviceURL
	if displayURL == "" {
		displayURL = "–Ω–µ —É–∫–∞–∑–∞–Ω"
	}

	fmt.Println("üöÄ –ó–∞–ø—É—Å–∫ —Ç–µ—Å—Ç–æ–≤ –¥–ª—è SellerProof Backend")
	fmt.Printf("üì° –ü–æ–¥–∫–ª—é—á–µ–Ω–∏–µ –∫ —Å–µ—Ä–≤–∏—Å—É: %s\n", displayURL)
	fmt.Printf("üîó –ê–¥—Ä–µ—Å –¥–ª—è gRPC: %s\n", normalizedURL)
	fmt.Printf("‚è±Ô∏è  –¢–∞–π–º–∞—É—Ç: %d —Å–µ–∫—É–Ω–¥\n", testTimeout)

	if testMode != "" {
		fmt.Printf("üéØ –†–µ–∂–∏–º: %s\n\n", testMode)
	} else {
		fmt.Println("üéØ –†–µ–∂–∏–º: –≤—Å–µ —Ç–µ—Å—Ç—ã\n")
	}

	// –¢–µ—Å—Ç—ã –∞—É—Ç–µ–Ω—Ç–∏—Ñ–∏–∫–∞—Ü–∏–∏
	if testMode == "" || testMode == "auth" {
		fmt.Println("üîê –ó–∞–ø—É—Å–∫ —Ç–µ—Å—Ç–æ–≤ –∞—É—Ç–µ–Ω—Ç–∏—Ñ–∏–∫–∞—Ü–∏–∏...")
		c.testRegister()
		c.testLogin()
		c.testGetProfile()
		c.testUpdateProfile()
		c.testRefreshToken()
		c.testLogout()
		fmt.Println()
	}

	// –¢–µ—Å—Ç—ã –≤–∏–¥–µ–æ
	if testMode == "" || testMode == "video" {
		fmt.Println("üìπ –ó–∞–ø—É—Å–∫ —Ç–µ—Å—Ç–æ–≤ –≤–∏–¥–µ–æ...")
		c.testInitiateMultipartUpload()
		c.testGetPartUploadURLs()
		c.testCompleteMultipartUpload()
		c.testGetVideo()
		c.testSearchVideos()
		c.testCreatePublicShareLink()
		c.testGetPublicVideo()
		c.testRevokeShareLink()
		fmt.Println()
	}

	fmt.Println("‚úÖ –í—Å–µ —Ç–µ—Å—Ç—ã –∑–∞–≤–µ—Ä—à–µ–Ω—ã!")
}

// printResult –≤—ã–≤–æ–¥–∏—Ç —Ä–µ–∑—É–ª—å—Ç–∞—Ç —Ç–µ—Å—Ç–∞
func (c *TestClient) printResult(testName string, success bool, details string) {
	status := "‚ùå –û–®–ò–ë–ö–ê"
	if success {
		status = "‚úÖ –£–°–ü–ï–•"
	}
	fmt.Printf("[%s] %s\n", status, testName)
	if details != "" {
		fmt.Printf("   %s\n", details)
	}
	fmt.Println()
}

// testRegister —Ç–µ—Å—Ç–∏—Ä—É–µ—Ç —Ä–µ–≥–∏—Å—Ç—Ä–∞—Ü–∏—é –ø–æ–ª—å–∑–æ–≤–∞—Ç–µ–ª—è
func (c *TestClient) testRegister() {
	fmt.Println("üìù –¢–µ—Å—Ç–∏—Ä–æ–≤–∞–Ω–∏–µ —Ä–µ–≥–∏—Å—Ç—Ä–∞—Ü–∏–∏ –ø–æ–ª—å–∑–æ–≤–∞—Ç–µ–ª—è...")

	req := &pb.RegisterRequest{
		Email:    fmt.Sprintf("test%d@example.com", time.Now().Unix()),
		Password: "TestPassword123!",
		FullName: "Test User",
	}

	ctx, cancel := context.WithTimeout(context.Background(), time.Duration(testTimeout)*time.Second)
	defer cancel()

	resp, err := c.auth.Register(ctx, req)
	if err != nil {
		c.printResult("–†–µ–≥–∏—Å—Ç—Ä–∞—Ü–∏—è", false, fmt.Sprintf("–û—à–∏–±–∫–∞: %v", err))
		return
	}

	c.userID = resp.UserId
	c.printResult("–†–µ–≥–∏—Å—Ç—Ä–∞—Ü–∏—è", true, fmt.Sprintf("ID –ø–æ–ª—å–∑–æ–≤–∞—Ç–µ–ª—è: %s, —Å–æ–æ–±—â–µ–Ω–∏–µ: %s", resp.UserId, resp.Message))
}

// testLogin —Ç–µ—Å—Ç–∏—Ä—É–µ—Ç –≤—Ö–æ–¥ –ø–æ–ª—å–∑–æ–≤–∞—Ç–µ–ª—è
func (c *TestClient) testLogin() {
	fmt.Println("üîê –¢–µ—Å—Ç–∏—Ä–æ–≤–∞–Ω–∏–µ –≤—Ö–æ–¥–∞ –ø–æ–ª—å–∑–æ–≤–∞—Ç–µ–ª—è...")

	req := &pb.LoginRequest{
		Email:    "test@example.com", // –ò—Å–ø–æ–ª—å–∑—É–µ–º —Å—É—â–µ—Å—Ç–≤—É—é—â–∏–π email –¥–ª—è —Ç–µ—Å—Ç–∞
		Password: "TestPassword123!",
	}

	ctx, cancel := context.WithTimeout(context.Background(), time.Duration(testTimeout)*time.Second)
	defer cancel()

	resp, err := c.auth.Login(ctx, req)
	if err != nil {
		c.printResult("–í—Ö–æ–¥", false, fmt.Sprintf("–û—à–∏–±–∫–∞: %v", err))
		return
	}

	c.token = resp.AccessToken
	c.userID = resp.User.UserId
	c.printResult("–í—Ö–æ–¥", true, fmt.Sprintf("–¢–æ–∫–µ–Ω –ø–æ–ª—É—á–µ–Ω, –ø–æ–ª—å–∑–æ–≤–∞—Ç–µ–ª—å: %s (%s)", resp.User.FullName, resp.User.Email))
}

// testGetProfile —Ç–µ—Å—Ç–∏—Ä—É–µ—Ç –ø–æ–ª—É—á–µ–Ω–∏–µ –ø—Ä–æ—Ñ–∏–ª—è
func (c *TestClient) testGetProfile() {
	fmt.Println("üë§ –¢–µ—Å—Ç–∏—Ä–æ–≤–∞–Ω–∏–µ –ø–æ–ª—É—á–µ–Ω–∏—è –ø—Ä–æ—Ñ–∏–ª—è...")

	if c.token == "" {
		c.printResult("–ü–æ–ª—É—á–µ–Ω–∏–µ –ø—Ä–æ—Ñ–∏–ª—è", false, "–¢–æ–∫–µ–Ω –æ—Ç—Å—É—Ç—Å—Ç–≤—É–µ—Ç, –Ω–µ–æ–±—Ö–æ–¥–∏–º–æ —Å–Ω–∞—á–∞–ª–∞ –≤–æ–π—Ç–∏")
		return
	}

	ctx, cancel := context.WithTimeout(context.Background(), time.Duration(testTimeout)*time.Second)
	defer cancel()

	// –î–æ–±–∞–≤–ª—è–µ–º —Ç–æ–∫–µ–Ω –≤ –º–µ—Ç–∞–¥–∞–Ω–Ω—ã–µ
	ctx = metadata.AppendToOutgoingContext(ctx, "authorization", fmt.Sprintf("Bearer %s", c.token))

	req := &pb.GetProfileRequest{}
	resp, err := c.auth.GetProfile(ctx, req)
	if err != nil {
		c.printResult("–ü–æ–ª—É—á–µ–Ω–∏–µ –ø—Ä–æ—Ñ–∏–ª—è", false, fmt.Sprintf("–û—à–∏–±–∫–∞: %v", err))
		return
	}

	c.printResult("–ü–æ–ª—É—á–µ–Ω–∏–µ –ø—Ä–æ—Ñ–∏–ª—è", true, fmt.Sprintf("–ü–æ–ª—å–∑–æ–≤–∞—Ç–µ–ª—å: %s (%s), —Ä–æ–ª—å: %s", resp.User.FullName, resp.User.Email, resp.User.Role))
}

// testUpdateProfile —Ç–µ—Å—Ç–∏—Ä—É–µ—Ç –æ–±–Ω–æ–≤–ª–µ–Ω–∏–µ –ø—Ä–æ—Ñ–∏–ª—è
func (c *TestClient) testUpdateProfile() {
	fmt.Println("‚úèÔ∏è –¢–µ—Å—Ç–∏—Ä–æ–≤–∞–Ω–∏–µ –æ–±–Ω–æ–≤–ª–µ–Ω–∏—è –ø—Ä–æ—Ñ–∏–ª—è...")

	if c.token == "" {
		c.printResult("–û–±–Ω–æ–≤–ª–µ–Ω–∏–µ –ø—Ä–æ—Ñ–∏–ª—è", false, "–¢–æ–∫–µ–Ω –æ—Ç—Å—É—Ç—Å—Ç–≤—É–µ—Ç, –Ω–µ–æ–±—Ö–æ–¥–∏–º–æ —Å–Ω–∞—á–∞–ª–∞ –≤–æ–π—Ç–∏")
		return
	}

	ctx, cancel := context.WithTimeout(context.Background(), time.Duration(testTimeout)*time.Second)
	defer cancel()

	// –î–æ–±–∞–≤–ª—è–µ–º —Ç–æ–∫–µ–Ω –≤ –º–µ—Ç–∞–¥–∞–Ω–Ω—ã–µ
	ctx = metadata.AppendToOutgoingContext(ctx, "authorization", fmt.Sprintf("Bearer %s", c.token))

	req := &pb.UpdateProfileRequest{
		FullName: "Updated Test User",
	}

	resp, err := c.auth.UpdateProfile(ctx, req)
	if err != nil {
		c.printResult("–û–±–Ω–æ–≤–ª–µ–Ω–∏–µ –ø—Ä–æ—Ñ–∏–ª—è", false, fmt.Sprintf("–û—à–∏–±–∫–∞: %v", err))
		return
	}

	c.printResult("–û–±–Ω–æ–≤–ª–µ–Ω–∏–µ –ø—Ä–æ—Ñ–∏–ª—è", true, fmt.Sprintf("–ò–º—è –æ–±–Ω–æ–≤–ª–µ–Ω–æ –Ω–∞: %s", resp.User.FullName))
}

// testRefreshToken —Ç–µ—Å—Ç–∏—Ä—É–µ—Ç –æ–±–Ω–æ–≤–ª–µ–Ω–∏–µ —Ç–æ–∫–µ–Ω–∞
func (c *TestClient) testRefreshToken() {
	fmt.Println("üîÑ –¢–µ—Å—Ç–∏—Ä–æ–≤–∞–Ω–∏–µ –æ–±–Ω–æ–≤–ª–µ–Ω–∏—è —Ç–æ–∫–µ–Ω–∞...")

	// –î–ª—è —ç—Ç–æ–≥–æ —Ç–µ—Å—Ç–∞ –Ω—É–∂–µ–Ω refresh —Ç–æ–∫–µ–Ω, –∫–æ—Ç–æ—Ä—ã–π –º—ã –ø–æ–ª—É—á–∞–µ–º –ø—Ä–∏ –≤—Ö–æ–¥–µ
	// –í —Ä–µ–∞–ª—å–Ω–æ–º —Å—Ü–µ–Ω–∞—Ä–∏–∏ –º—ã –±—ã —Å–æ—Ö—Ä–∞–Ω–∏–ª–∏ refresh —Ç–æ–∫–µ–Ω –∏–∑ –æ—Ç–≤–µ—Ç–∞ –≤—Ö–æ–¥–∞
	c.printResult("–û–±–Ω–æ–≤–ª–µ–Ω–∏–µ —Ç–æ–∫–µ–Ω–∞", false, "–¢—Ä–µ–±—É–µ—Ç—Å—è refresh —Ç–æ–∫–µ–Ω –∏–∑ –æ—Ç–≤–µ—Ç–∞ –≤—Ö–æ–¥–∞")
}

// testLogout —Ç–µ—Å—Ç–∏—Ä—É–µ—Ç –≤—ã—Ö–æ–¥ –ø–æ–ª—å–∑–æ–≤–∞—Ç–µ–ª—è
func (c *TestClient) testLogout() {
	fmt.Println("üö™ –¢–µ—Å—Ç–∏—Ä–æ–≤–∞–Ω–∏–µ –≤—ã—Ö–æ–¥–∞ –ø–æ–ª—å–∑–æ–≤–∞—Ç–µ–ª—è...")

	// –î–ª—è —ç—Ç–æ–≥–æ —Ç–µ—Å—Ç–∞ –Ω—É–∂–µ–Ω refresh —Ç–æ–∫–µ–Ω
	c.printResult("–í—ã—Ö–æ–¥", false, "–¢—Ä–µ–±—É–µ—Ç—Å—è refresh —Ç–æ–∫–µ–Ω –∏–∑ –æ—Ç–≤–µ—Ç–∞ –≤—Ö–æ–¥–∞")
}

// testInitiateMultipartUpload —Ç–µ—Å—Ç–∏—Ä—É–µ—Ç –∏–Ω–∏—Ü–∏–∞–ª–∏–∑–∞—Ü–∏—é –∑–∞–≥—Ä—É–∑–∫–∏ –≤–∏–¥–µ–æ
func (c *TestClient) testInitiateMultipartUpload() {
	fmt.Println("üìπ –¢–µ—Å—Ç–∏—Ä–æ–≤–∞–Ω–∏–µ –∏–Ω–∏—Ü–∏–∞–ª–∏–∑–∞—Ü–∏–∏ –∑–∞–≥—Ä—É–∑–∫–∏ –≤–∏–¥–µ–æ...")

	if c.token == "" {
		c.printResult("–ò–Ω–∏—Ü–∏–∞–ª–∏–∑–∞—Ü–∏—è –∑–∞–≥—Ä—É–∑–∫–∏ –≤–∏–¥–µ–æ", false, "–¢–æ–∫–µ–Ω –æ—Ç—Å—É—Ç—Å—Ç–≤—É–µ—Ç, –Ω–µ–æ–±—Ö–æ–¥–∏–º–æ —Å–Ω–∞—á–∞–ª–∞ –≤–æ–π—Ç–∏")
		return
	}

	ctx, cancel := context.WithTimeout(context.Background(), time.Duration(testTimeout)*time.Second)
	defer cancel()

	// –î–æ–±–∞–≤–ª—è–µ–º —Ç–æ–∫–µ–Ω –≤ –º–µ—Ç–∞–¥–∞–Ω–Ω—ã–µ
	ctx = metadata.AppendToOutgoingContext(ctx, "authorization", fmt.Sprintf("Bearer %s", c.token))

	req := &pb.InitiateMultipartUploadRequest{
		FileName:        "test-video.mp4",
		FileSizeBytes:   102400000, // 100MB
		DurationSeconds: 300,       // 5 –º–∏–Ω—É—Ç
	}

	resp, err := c.video.InitiateMultipartUpload(ctx, req)
	if err != nil {
		c.printResult("–ò–Ω–∏—Ü–∏–∞–ª–∏–∑–∞—Ü–∏—è –∑–∞–≥—Ä—É–∑–∫–∏ –≤–∏–¥–µ–æ", false, fmt.Sprintf("–û—à–∏–±–∫–∞: %v", err))
		return
	}

	c.printResult("–ò–Ω–∏—Ü–∏–∞–ª–∏–∑–∞—Ü–∏—è –∑–∞–≥—Ä—É–∑–∫–∏ –≤–∏–¥–µ–æ", true, fmt.Sprintf("ID –≤–∏–¥–µ–æ: %s, ID –∑–∞–≥—Ä—É–∑–∫–∏: %s", resp.VideoId, resp.UploadId))
}

// testGetPartUploadURLs —Ç–µ—Å—Ç–∏—Ä—É–µ—Ç –ø–æ–ª—É—á–µ–Ω–∏–µ URL –¥–ª—è –∑–∞–≥—Ä—É–∑–∫–∏ —á–∞—Å—Ç–µ–π
func (c *TestClient) testGetPartUploadURLs() {
	fmt.Println("üîó –¢–µ—Å—Ç–∏—Ä–æ–≤–∞–Ω–∏–µ –ø–æ–ª—É—á–µ–Ω–∏—è URL –¥–ª—è –∑–∞–≥—Ä—É–∑–∫–∏ —á–∞—Å—Ç–µ–π...")

	if c.token == "" {
		c.printResult("–ü–æ–ª—É—á–µ–Ω–∏–µ URL –¥–ª—è –∑–∞–≥—Ä—É–∑–∫–∏ —á–∞—Å—Ç–µ–π", false, "–¢–æ–∫–µ–Ω –æ—Ç—Å—É—Ç—Å—Ç–≤—É–µ—Ç, –Ω–µ–æ–±—Ö–æ–¥–∏–º–æ —Å–Ω–∞—á–∞–ª–∞ –≤–æ–π—Ç–∏")
		return
	}

	ctx, cancel := context.WithTimeout(context.Background(), time.Duration(testTimeout)*time.Second)
	defer cancel()

	// –î–æ–±–∞–≤–ª—è–µ–º —Ç–æ–∫–µ–Ω –≤ –º–µ—Ç–∞–¥–∞–Ω–Ω—ã–µ
	ctx = metadata.AppendToOutgoingContext(ctx, "authorization", fmt.Sprintf("Bearer %s", c.token))

	req := &pb.GetPartUploadURLsRequest{
		VideoId:    "test-video-id", // –ò—Å–ø–æ–ª—å–∑—É–µ–º —Ç–µ—Å—Ç–æ–≤—ã–π ID
		TotalParts: 5,
	}

	resp, err := c.video.GetPartUploadURLs(ctx, req)
	if err != nil {
		c.printResult("–ü–æ–ª—É—á–µ–Ω–∏–µ URL –¥–ª—è –∑–∞–≥—Ä—É–∑–∫–∏ —á–∞—Å—Ç–µ–π", false, fmt.Sprintf("–û—à–∏–±–∫–∞: %v", err))
		return
	}

	c.printResult("–ü–æ–ª—É—á–µ–Ω–∏–µ URL –¥–ª—è –∑–∞–≥—Ä—É–∑–∫–∏ —á–∞—Å—Ç–µ–π", true, fmt.Sprintf("–ü–æ–ª—É—á–µ–Ω–æ %d URL, –∏—Å—Ç–µ–∫–∞—é—Ç: %d", len(resp.PartUrls), resp.ExpiresAt))
}

// testCompleteMultipartUpload —Ç–µ—Å—Ç–∏—Ä—É–µ—Ç –∑–∞–≤–µ—Ä—à–µ–Ω–∏–µ –∑–∞–≥—Ä—É–∑–∫–∏ –≤–∏–¥–µ–æ
func (c *TestClient) testCompleteMultipartUpload() {
	fmt.Println("‚úÖ –¢–µ—Å—Ç–∏—Ä–æ–≤–∞–Ω–∏–µ –∑–∞–≤–µ—Ä—à–µ–Ω–∏—è –∑–∞–≥—Ä—É–∑–∫–∏ –≤–∏–¥–µ–æ...")

	if c.token == "" {
		c.printResult("–ó–∞–≤–µ—Ä—à–µ–Ω–∏–µ –∑–∞–≥—Ä—É–∑–∫–∏ –≤–∏–¥–µ–æ", false, "–¢–æ–∫–µ–Ω –æ—Ç—Å—É—Ç—Å—Ç–≤—É–µ—Ç, –Ω–µ–æ–±—Ö–æ–¥–∏–º–æ —Å–Ω–∞—á–∞–ª–∞ –≤–æ–π—Ç–∏")
		return
	}

	ctx, cancel := context.WithTimeout(context.Background(), time.Duration(testTimeout)*time.Second)
	defer cancel()

	// –î–æ–±–∞–≤–ª—è–µ–º —Ç–æ–∫–µ–Ω –≤ –º–µ—Ç–∞–¥–∞–Ω–Ω—ã–µ
	ctx = metadata.AppendToOutgoingContext(ctx, "authorization", fmt.Sprintf("Bearer %s", c.token))

	// –°–æ–∑–¥–∞–µ–º —Ç–µ—Å—Ç–æ–≤—ã–µ —á–∞—Å—Ç–∏
	parts := make([]*pb.CompletedPart, 0)
	for i := 1; i <= 3; i++ {
		parts = append(parts, &pb.CompletedPart{
			PartNumber: int32(i),
			Etag:       fmt.Sprintf("etag-part-%d", i),
		})
	}

	req := &pb.CompleteMultipartUploadRequest{
		VideoId: "test-video-id", // –ò—Å–ø–æ–ª—å–∑—É–µ–º —Ç–µ—Å—Ç–æ–≤—ã–π ID
		Parts:   parts,
	}

	resp, err := c.video.CompleteMultipartUpload(ctx, req)
	if err != nil {
		c.printResult("–ó–∞–≤–µ—Ä—à–µ–Ω–∏–µ –∑–∞–≥—Ä—É–∑–∫–∏ –≤–∏–¥–µ–æ", false, fmt.Sprintf("–û—à–∏–±–∫–∞: %v", err))
		return
	}

	c.printResult("–ó–∞–≤–µ—Ä—à–µ–Ω–∏–µ –∑–∞–≥—Ä—É–∑–∫–∏ –≤–∏–¥–µ–æ", true, fmt.Sprintf("–°–æ–æ–±—â–µ–Ω–∏–µ: %s, URL –≤–∏–¥–µ–æ: %s", resp.Message, resp.VideoUrl))
}

// testGetVideo —Ç–µ—Å—Ç–∏—Ä—É–µ—Ç –ø–æ–ª—É—á–µ–Ω–∏–µ –∏–Ω—Ñ–æ—Ä–º–∞—Ü–∏–∏ –æ –≤–∏–¥–µ–æ
func (c *TestClient) testGetVideo() {
	fmt.Println("üìπ –¢–µ—Å—Ç–∏—Ä–æ–≤–∞–Ω–∏–µ –ø–æ–ª—É—á–µ–Ω–∏—è –∏–Ω—Ñ–æ—Ä–º–∞—Ü–∏–∏ –æ –≤–∏–¥–µ–æ...")

	if c.token == "" {
		c.printResult("–ü–æ–ª—É—á–µ–Ω–∏–µ –∏–Ω—Ñ–æ—Ä–º–∞—Ü–∏–∏ –æ –≤–∏–¥–µ–æ", false, "–¢–æ–∫–µ–Ω –æ—Ç—Å—É—Ç—Å—Ç–≤—É–µ—Ç, –Ω–µ–æ–±—Ö–æ–¥–∏–º–æ —Å–Ω–∞—á–∞–ª–∞ –≤–æ–π—Ç–∏")
		return
	}

	ctx, cancel := context.WithTimeout(context.Background(), time.Duration(testTimeout)*time.Second)
	defer cancel()

	// –î–æ–±–∞–≤–ª—è–µ–º —Ç–æ–∫–µ–Ω –≤ –º–µ—Ç–∞–¥–∞–Ω–Ω—ã–µ
	ctx = metadata.AppendToOutgoingContext(ctx, "authorization", fmt.Sprintf("Bearer %s", c.token))

	req := &pb.GetVideoRequest{
		VideoId: "test-video-id", // –ò—Å–ø–æ–ª—å–∑—É–µ–º —Ç–µ—Å—Ç–æ–≤—ã–π ID
	}

	resp, err := c.video.GetVideo(ctx, req)
	if err != nil {
		c.printResult("–ü–æ–ª—É—á–µ–Ω–∏–µ –∏–Ω—Ñ–æ—Ä–º–∞—Ü–∏–∏ –æ –≤–∏–¥–µ–æ", false, fmt.Sprintf("–û—à–∏–±–∫–∞: %v", err))
		return
	}

	c.printResult("–ü–æ–ª—É—á–µ–Ω–∏–µ –∏–Ω—Ñ–æ—Ä–º–∞—Ü–∏–∏ –æ –≤–∏–¥–µ–æ", true, fmt.Sprintf("–í–∏–¥–µ–æ: %s, —Ä–∞–∑–º–µ—Ä: %d –±–∞–π—Ç, —Å—Ç–∞—Ç—É—Å: %s", resp.Video.FileName, resp.Video.FileSizeBytes, resp.Video.UploadStatus))
}

// testSearchVideos —Ç–µ—Å—Ç–∏—Ä—É–µ—Ç –ø–æ–∏—Å–∫ –≤–∏–¥–µ–æ
func (c *TestClient) testSearchVideos() {
	fmt.Println("üîç –¢–µ—Å—Ç–∏—Ä–æ–≤–∞–Ω–∏–µ –ø–æ–∏—Å–∫–∞ –≤–∏–¥–µ–æ...")

	if c.token == "" {
		c.printResult("–ü–æ–∏—Å–∫ –≤–∏–¥–µ–æ", false, "–¢–æ–∫–µ–Ω –æ—Ç—Å—É—Ç—Å—Ç–≤—É–µ—Ç, –Ω–µ–æ–±—Ö–æ–¥–∏–º–æ —Å–Ω–∞—á–∞–ª–∞ –≤–æ–π—Ç–∏")
		return
	}

	ctx, cancel := context.WithTimeout(context.Background(), time.Duration(testTimeout)*time.Second)
	defer cancel()

	// –î–æ–±–∞–≤–ª—è–µ–º —Ç–æ–∫–µ–Ω –≤ –º–µ—Ç–∞–¥–∞–Ω–Ω—ã–µ
	ctx = metadata.AppendToOutgoingContext(ctx, "authorization", fmt.Sprintf("Bearer %s", c.token))

	req := &pb.SearchVideosRequest{
		Query:    "test",
		Page:     1,
		PageSize: 10,
	}

	resp, err := c.video.SearchVideos(ctx, req)
	if err != nil {
		c.printResult("–ü–æ–∏—Å–∫ –≤–∏–¥–µ–æ", false, fmt.Sprintf("–û—à–∏–±–∫–∞: %v", err))
		return
	}

	c.printResult("–ü–æ–∏—Å–∫ –≤–∏–¥–µ–æ", true, fmt.Sprintf("–ù–∞–π–¥–µ–Ω–æ –≤–∏–¥–µ–æ: %d, –≤—Å–µ–≥–æ: %d", len(resp.Videos), resp.TotalCount))
}

// testCreatePublicShareLink —Ç–µ—Å—Ç–∏—Ä—É–µ—Ç —Å–æ–∑–¥–∞–Ω–∏–µ –ø—É–±–ª–∏—á–Ω–æ–π —Å—Å—ã–ª–∫–∏
func (c *TestClient) testCreatePublicShareLink() {
	fmt.Println("üîó –¢–µ—Å—Ç–∏—Ä–æ–≤–∞–Ω–∏–µ —Å–æ–∑–¥–∞–Ω–∏—è –ø—É–±–ª–∏—á–Ω–æ–π —Å—Å—ã–ª–∫–∏...")

	if c.token == "" {
		c.printResult("–°–æ–∑–¥–∞–Ω–∏–µ –ø—É–±–ª–∏—á–Ω–æ–π —Å—Å—ã–ª–∫–∏", false, "–¢–æ–∫–µ–Ω –æ—Ç—Å—É—Ç—Å—Ç–≤—É–µ—Ç, –Ω–µ–æ–±—Ö–æ–¥–∏–º–æ —Å–Ω–∞—á–∞–ª–∞ –≤–æ–π—Ç–∏")
		return
	}

	ctx, cancel := context.WithTimeout(context.Background(), time.Duration(testTimeout)*time.Second)
	defer cancel()

	// –î–æ–±–∞–≤–ª—è–µ–º —Ç–æ–∫–µ–Ω –≤ –º–µ—Ç–∞–¥–∞–Ω–Ω—ã–µ
	ctx = metadata.AppendToOutgoingContext(ctx, "authorization", fmt.Sprintf("Bearer %s", c.token))

	req := &pb.CreateShareLinkRequest{
		VideoId:        "test-video-id", // –ò—Å–ø–æ–ª—å–∑—É–µ–º —Ç–µ—Å—Ç–æ–≤—ã–π ID
		ExpiresInHours: 24,
	}

	resp, err := c.video.CreatePublicShareLink(ctx, req)
	if err != nil {
		c.printResult("–°–æ–∑–¥–∞–Ω–∏–µ –ø—É–±–ª–∏—á–Ω–æ–π —Å—Å—ã–ª–∫–∏", false, fmt.Sprintf("–û—à–∏–±–∫–∞: %v", err))
		return
	}

	c.printResult("–°–æ–∑–¥–∞–Ω–∏–µ –ø—É–±–ª–∏—á–Ω–æ–π —Å—Å—ã–ª–∫–∏", true, fmt.Sprintf("URL: %s, –∏—Å—Ç–µ–∫–∞–µ—Ç: %d", resp.ShareUrl, resp.ExpiresAt))
}

// testGetPublicVideo —Ç–µ—Å—Ç–∏—Ä—É–µ—Ç –ø–æ–ª—É—á–µ–Ω–∏–µ –ø—É–±–ª–∏—á–Ω–æ–≥–æ –≤–∏–¥–µ–æ
func (c *TestClient) testGetPublicVideo() {
	fmt.Println("üåç –¢–µ—Å—Ç–∏—Ä–æ–≤–∞–Ω–∏–µ –ø–æ–ª—É—á–µ–Ω–∏—è –ø—É–±–ª–∏—á–Ω–æ–≥–æ –≤–∏–¥–µ–æ...")

	ctx, cancel := context.WithTimeout(context.Background(), time.Duration(testTimeout)*time.Second)
	defer cancel()

	req := &pb.GetPublicVideoRequest{
		ShareToken: "test-share-token", // –ò—Å–ø–æ–ª—å–∑—É–µ–º —Ç–µ—Å—Ç–æ–≤—ã–π —Ç–æ–∫–µ–Ω
	}

	resp, err := c.video.GetPublicVideo(ctx, req)
	if err != nil {
		c.printResult("–ü–æ–ª—É—á–µ–Ω–∏–µ –ø—É–±–ª–∏—á–Ω–æ–≥–æ –≤–∏–¥–µ–æ", false, fmt.Sprintf("–û—à–∏–±–∫–∞: %v", err))
		return
	}

	c.printResult("–ü–æ–ª—É—á–µ–Ω–∏–µ –ø—É–±–ª–∏—á–Ω–æ–≥–æ –≤–∏–¥–µ–æ", true, fmt.Sprintf("–§–∞–π–ª: %s, —Ä–∞–∑–º–µ—Ä: %d, URL: %s", resp.FileName, resp.FileSize, resp.DownloadUrl))
}

// testRevokeShareLink —Ç–µ—Å—Ç–∏—Ä—É–µ—Ç –æ—Ç–∑—ã–≤ –ø—É–±–ª–∏—á–Ω–æ–π —Å—Å—ã–ª–∫–∏
func (c *TestClient) testRevokeShareLink() {
	fmt.Println("üö´ –¢–µ—Å—Ç–∏—Ä–æ–≤–∞–Ω–∏–µ –æ—Ç–∑—ã–≤–∞ –ø—É–±–ª–∏—á–Ω–æ–π —Å—Å—ã–ª–∫–∏...")

	if c.token == "" {
		c.printResult("–û—Ç–∑—ã–≤ –ø—É–±–ª–∏—á–Ω–æ–π —Å—Å—ã–ª–∫–∏", false, "–¢–æ–∫–µ–Ω –æ—Ç—Å—É—Ç—Å—Ç–≤—É–µ—Ç, –Ω–µ–æ–±—Ö–æ–¥–∏–º–æ —Å–Ω–∞—á–∞–ª–∞ –≤–æ–π—Ç–∏")
		return
	}

	ctx, cancel := context.WithTimeout(context.Background(), time.Duration(testTimeout)*time.Second)
	defer cancel()

	// –î–æ–±–∞–≤–ª—è–µ–º —Ç–æ–∫–µ–Ω –≤ –º–µ—Ç–∞–¥–∞–Ω–Ω—ã–µ
	ctx = metadata.AppendToOutgoingContext(ctx, "authorization", fmt.Sprintf("Bearer %s", c.token))

	req := &pb.RevokeShareLinkRequest{
		VideoId: "test-video-id", // –ò—Å–ø–æ–ª—å–∑—É–µ–º —Ç–µ—Å—Ç–æ–≤—ã–π ID
	}

	resp, err := c.video.RevokeShareLink(ctx, req)
	if err != nil {
		c.printResult("–û—Ç–∑—ã–≤ –ø—É–±–ª–∏—á–Ω–æ–π —Å—Å—ã–ª–∫–∏", false, fmt.Sprintf("–û—à–∏–±–∫–∞: %v", err))
		return
	}

	c.printResult("–û—Ç–∑—ã–≤ –ø—É–±–ª–∏—á–Ω–æ–π —Å—Å—ã–ª–∫–∏", true, fmt.Sprintf("–£—Å–ø–µ—à–Ω–æ: %t", resp.Success))
}

// Main —Ñ—É–Ω–∫—Ü–∏—è –¥–ª—è –∑–∞–ø—É—Å–∫–∞ —Ç–µ—Å—Ç–æ–≤
func main() {
	client, err := NewTestClient()
	if err != nil {
		log.Fatalf("–û—à–∏–±–∫–∞ —Å–æ–∑–¥–∞–Ω–∏—è –∫–ª–∏–µ–Ω—Ç–∞: %v", err)
	}
	defer client.Close()

	client.RunTests()
}
